--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Contact-Us/Index.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Contact-Us/Index.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "Contact us";
 }
 
-@section Back {}
+@section Back {
+    @* todo: use fh-back-link? *@
     <a href="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
 }
 
