--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Privacy.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Privacy.cshtml
@@ -4,114 +4,113 @@
     ViewData["Title"] = "Privacy Policy";
 }
 
+@section Back {
 <a href="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
+}
 
-<main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
 
-
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-
-            <h1 class="govuk-heading-l">Privacy notice</h1>
-            <p>‘Manage family support services and accounts’ is provided by the Department for Education (DfE).</p>
-            <p>The Department for Education is joint data controller with various local authorities for data collected within this service. The local authority that your account is associated with shares data controller responsibility for your account with DfE.</p>
-            <p>A data controller determines how and why personal data is processed. For more information, read the <a href="https://ico.org.uk/ESDWebPages/Entry/Z1001723">Department for Education’s entry in the Data Protection Public Register</a>.</p>
-            <h2 class="govuk-heading-m">What data we collect</h2>
-            <p>The personal data we collect from you is:</p>
-            <ul class="govuk-list govuk-list--bullet">
-                <li>your name </li>
-                <li>your email address </li>
-            </ul>
-            <p>If you are a local authority administrator, we also collect:</p>
-            <ul class="govuk-list govuk-list--bullet">
-                <li>your phone number</li>
-                <li>the name of your local authority</li>
-            </ul>
-            <p>If you are a voluntary and community sector organisation administrator, we also collect:</p>
-            <ul class="govuk-list govuk-list--bullet">
-                <li>your organisation</li>
-                <li>the name of your local authority</li>
-            </ul>
-            <p>We use <a href="/cookies/index">cookies</a> to collect information on how you use the site.</p>
-            <p>Where you provide your consent, we use <a href="https://support.google.com/analytics/topic/2919631">Google Analytics</a> cookies. Google Analytics processes information about: </p>
-            <ul class="govuk-list govuk-list--bullet">
-                <li>your Internet Protocol (IP) address</li>
-                <li>your device and location</li>
-                <li>the pages you visit in ‘Manage family support services and accounts’</li>
-                <li>how long you spend on each page and what you click on</li>
-                <li>how you got to the service</li>
-            </ul>
-            <p>We will not combine analytics information with other data sets in a way that would directly identify you.</p>
-            <h2 class="govuk-heading-m">Why we collect this data </h2>
-            <p>We collect personal data to: </p>
-            <ul class="govuk-list govuk-list--bullet">
-                <li>verify your identity</li>
-                <li>set up your account</li>
-                <li>send you email updates</li>
-                <li>analyse, monitor and improve the service</li>
-            </ul>
-            <h2 class="govuk-heading-m">How long we keep this data</h2>
-            <p>We retain your personal data while you are an active user, and then for one year after the last time you use your ‘Manage family support services and accounts’ account.</p>
-            <h2 class="govuk-heading-m">Who we share this data with</h2>
-            <p>As part of delivering the DfE services, we share your personal data with the local authority where you work, or where the service you are associated with operates.</p>
-            <p>We will not:</p>
-            <ul class="govuk-list govuk-list--bullet">
-                <li>sell or rent your data to third parties</li>
-                <li>share your data with third parties for marketing purposes</li>
-            </ul>
-            <p>We will only share your personal data with other organisations if we are required to do so by law – for example, by court order, or to prevent fraud or other crime.</p>
-            <h2 class="govuk-heading-m">Where this data is processed and stored</h2>
-            <p>We design, build and run our systems to make sure that data is as safe as possible at any stage, both while it’s processed and when it’s stored.</p>
-            <p>Your personal data is stored on our IT infrastructure and shared with our data processors, so it may be transferred and stored securely outside the United Kingdom. Where that’s the case it will be subject to equivalent legal protection through the use of International Data Transfer Agreements or <a href="https://commission.europa.eu/law/law-topic/data-protection/international-dimension-data-protection/adequacy-decisions_en">Adequacy Decisions</a>.</p>
-            <p>​The data we collect with Google Analytics cookies is transferred and stored with Google, where we analyse it with Google Analytics software (GA4). We do not allow Google to use or share this data for their own purposes.</p>
-            <h2 class="govuk-heading-m">How we protect this data and keep it secure</h2>
-            <p>We are committed to keeping your data secure. We have procedures in place to secure your data and prevent unauthorised access or disclosure. For example, we protect data using varying levels of encryption. We also make sure that any third parties that we deal with keep all personal data they process on our behalf secure.</p>
-            <h2 class="govuk-heading-m">Personal data rights</h2>
-            <p>You have the right to:</p>
-            <ul class="govuk-list govuk-list--bullet">
-                <li>request that we remove your personal data from the system</li>
-                <li>request a copy of your personal data - this will be provided in a structured, commonly used and machine-readable format</li>
-            </ul>
-            <p><a href="https://ico.org.uk/for-the-public/">Find out more about your personal data rights</a>.</p>
-            <h2 class="govuk-heading-m">Questions and complaints</h2>
-            <p>You can read about <a href="https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter"> how the DfE handles personal information in the personal information charter</a>.</p>
-            <p>You can contact us by using our <a href="https://form.education.gov.uk/service/Contact_the_Department_for_EducationDfE"> secure contact form</a> if you:</p>
-            <ul class="govuk-list govuk-list--bullet">
-                <li>have any questions about anything on this page</li>
-                <li>think that your personal data has been misused or mishandled</li>
-                <li>want to <a href="https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter#how-to-make-a-subject-access-requestmake"> make a subject access request (SAR)</a></li>
-            </ul>
-            <p>You can also write to the Data Protection Officer, who provides independent advice and monitoring of DfE’s use of personal information:</p>
-            <div class="govuk-inset-text">
-                <p>
-                    Emma Wharram, Data Protection Officer
-                    <br>Department for Education (B2.28)
-                    <br>7 and 8 Wellington Place
-                    <br>Leeds
-                    <br>LS1 4AW
-                </p>
-            </div>
-            <p>If you consider that your personal data has been misused or mishandled, you may make a complaint to the Information Commissioner, who is an independent regulator:</p>
-            <div class="govuk-inset-text">
-                <p>
-                    Information Commissioner’s Office
-                    <br>Wycliffe House
-                    <br>Water Lane
-                    <br>Wilmslow
-                    <br>Cheshire
-                    <br>SK9 5AF
-                </p><p>
-                    Telephone: 0303 123 1113
-                    <br>Email: <a href="icocasework@ico.org.uk">icocasework@ico.org.uk</a>
-                </p>
-            </div>
-            <p>Complaints to the Information Commissioner are without prejudice to your right to seek redress through the courts.</p>
-            <h2 class="govuk-heading-m">Changes to this notice</h2>
-            <p>This notice was last updated on 10 July 2023. It will be reviewed on 10 July 2024.</p>
-            <p>We may change this privacy notice before its review date. When we make changes, we will add a change note at the bottom of this page. Any changes to this privacy notice will apply to you and your data immediately. If these changes affect how your personal data is processed, DfE will take reasonable steps to make sure you know.</p>
-            <h2 class="govuk-heading-m">Our legal basis for processing your data</h2>
-            <p>The legal basis for processing your data is public task article 6(1)(e) of the General Data Protection Regulation (GDPR).</p>
+        <h1 class="govuk-heading-l">Privacy notice</h1>
+        <p>‘Manage family support services and accounts’ is provided by the Department for Education (DfE).</p>
+        <p>The Department for Education is joint data controller with various local authorities for data collected within this service. The local authority that your account is associated with shares data controller responsibility for your account with DfE.</p>
+        <p>A data controller determines how and why personal data is processed. For more information, read the <a href="https://ico.org.uk/ESDWebPages/Entry/Z1001723">Department for Education’s entry in the Data Protection Public Register</a>.</p>
+        <h2 class="govuk-heading-m">What data we collect</h2>
+        <p>The personal data we collect from you is:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>your name </li>
+            <li>your email address </li>
+        </ul>
+        <p>If you are a local authority administrator, we also collect:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>your phone number</li>
+            <li>the name of your local authority</li>
+        </ul>
+        <p>If you are a voluntary and community sector organisation administrator, we also collect:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>your organisation</li>
+            <li>the name of your local authority</li>
+        </ul>
+        <p>We use <a href="/cookies/index">cookies</a> to collect information on how you use the site.</p>
+        <p>Where you provide your consent, we use <a href="https://support.google.com/analytics/topic/2919631">Google Analytics</a> cookies. Google Analytics processes information about: </p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>your Internet Protocol (IP) address</li>
+            <li>your device and location</li>
+            <li>the pages you visit in ‘Manage family support services and accounts’</li>
+            <li>how long you spend on each page and what you click on</li>
+            <li>how you got to the service</li>
+        </ul>
+        <p>We will not combine analytics information with other data sets in a way that would directly identify you.</p>
+        <h2 class="govuk-heading-m">Why we collect this data </h2>
+        <p>We collect personal data to: </p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>verify your identity</li>
+            <li>set up your account</li>
+            <li>send you email updates</li>
+            <li>analyse, monitor and improve the service</li>
+        </ul>
+        <h2 class="govuk-heading-m">How long we keep this data</h2>
+        <p>We retain your personal data while you are an active user, and then for one year after the last time you use your ‘Manage family support services and accounts’ account.</p>
+        <h2 class="govuk-heading-m">Who we share this data with</h2>
+        <p>As part of delivering the DfE services, we share your personal data with the local authority where you work, or where the service you are associated with operates.</p>
+        <p>We will not:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>sell or rent your data to third parties</li>
+            <li>share your data with third parties for marketing purposes</li>
+        </ul>
+        <p>We will only share your personal data with other organisations if we are required to do so by law – for example, by court order, or to prevent fraud or other crime.</p>
+        <h2 class="govuk-heading-m">Where this data is processed and stored</h2>
+        <p>We design, build and run our systems to make sure that data is as safe as possible at any stage, both while it’s processed and when it’s stored.</p>
+        <p>Your personal data is stored on our IT infrastructure and shared with our data processors, so it may be transferred and stored securely outside the United Kingdom. Where that’s the case it will be subject to equivalent legal protection through the use of International Data Transfer Agreements or <a href="https://commission.europa.eu/law/law-topic/data-protection/international-dimension-data-protection/adequacy-decisions_en">Adequacy Decisions</a>.</p>
+        <p>​The data we collect with Google Analytics cookies is transferred and stored with Google, where we analyse it with Google Analytics software (GA4). We do not allow Google to use or share this data for their own purposes.</p>
+        <h2 class="govuk-heading-m">How we protect this data and keep it secure</h2>
+        <p>We are committed to keeping your data secure. We have procedures in place to secure your data and prevent unauthorised access or disclosure. For example, we protect data using varying levels of encryption. We also make sure that any third parties that we deal with keep all personal data they process on our behalf secure.</p>
+        <h2 class="govuk-heading-m">Personal data rights</h2>
+        <p>You have the right to:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>request that we remove your personal data from the system</li>
+            <li>request a copy of your personal data - this will be provided in a structured, commonly used and machine-readable format</li>
+        </ul>
+        <p><a href="https://ico.org.uk/for-the-public/">Find out more about your personal data rights</a>.</p>
+        <h2 class="govuk-heading-m">Questions and complaints</h2>
+        <p>You can read about <a href="https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter"> how the DfE handles personal information in the personal information charter</a>.</p>
+        <p>You can contact us by using our <a href="https://form.education.gov.uk/service/Contact_the_Department_for_EducationDfE"> secure contact form</a> if you:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>have any questions about anything on this page</li>
+            <li>think that your personal data has been misused or mishandled</li>
+            <li>want to <a href="https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter#how-to-make-a-subject-access-requestmake"> make a subject access request (SAR)</a></li>
+        </ul>
+        <p>You can also write to the Data Protection Officer, who provides independent advice and monitoring of DfE’s use of personal information:</p>
+        <div class="govuk-inset-text">
+            <p>
+                Emma Wharram, Data Protection Officer
+                <br>Department for Education (B2.28)
+                <br>7 and 8 Wellington Place
+                <br>Leeds
+                <br>LS1 4AW
+            </p>
         </div>
-
+        <p>If you consider that your personal data has been misused or mishandled, you may make a complaint to the Information Commissioner, who is an independent regulator:</p>
+        <div class="govuk-inset-text">
+            <p>
+                Information Commissioner’s Office
+                <br>Wycliffe House
+                <br>Water Lane
+                <br>Wilmslow
+                <br>Cheshire
+                <br>SK9 5AF
+            </p><p>
+                Telephone: 0303 123 1113
+                <br>Email: <a href="icocasework@ico.org.uk">icocasework@ico.org.uk</a>
+            </p>
+        </div>
+        <p>Complaints to the Information Commissioner are without prejudice to your right to seek redress through the courts.</p>
+        <h2 class="govuk-heading-m">Changes to this notice</h2>
+        <p>This notice was last updated on 10 July 2023. It will be reviewed on 10 July 2024.</p>
+        <p>We may change this privacy notice before its review date. When we make changes, we will add a change note at the bottom of this page. Any changes to this privacy notice will apply to you and your data immediately. If these changes affect how your personal data is processed, DfE will take reasonable steps to make sure you know.</p>
+        <h2 class="govuk-heading-m">Our legal basis for processing your data</h2>
+        <p>The legal basis for processing your data is public task article 6(1)(e) of the General Data Protection Regulation (GDPR).</p>
     </div>
-</main>
+
+</div>
+
