plug in cookie page (functionality only)

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Cookies/Index.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Cookies/Index.cshtml
@@ -3,3 +3,9 @@
 @{
     ViewData["Title"] = "Cookies";
 }
+
+@section Back {
+    <a class="govuk-back-link fh-back-link">Back</a>
+}
+
+<partial name="~/Pages/Shared/_CookiePage.cshtml" model="Model.CookiePage" />
