--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/AgreeToTermsAndConditions.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/AgreeToTermsAndConditions.cshtml
@@ -13,14 +13,14 @@
             <h1 class="govuk-heading-l">Agree to our terms of use</h1>
 
             <p>By continuing, you confirm that you agree to Manage family support services and accounts:</p>
-            <ul>
+            <ul class="govuk-list">
                 <li><a asp-page="/Privacy" class="govuk-link" rel="noreferrer noopener" target="_blank">privacy notice (opens in new tab)</a>, which explains how we use your personal information</li>
                 <li><a asp-page="/TermsAndConditions" class="govuk-link" rel="noreferrer noopener" target="_blank">terms and conditions (opens in new tab)</a></li>
             </ul>
 
             <form method="post">
                 <input type="hidden" id="ReturnPath" name="ReturnPath" asp-for="ReturnPath" />
-                <button class="govuk-button">
+                <button type="submit" class="govuk-button" data-module="govuk-button">
                     Continue
                 </button>
             </form>
