--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Privacy.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Privacy.cshtml
@@ -5,7 +5,8 @@
 }
 
 @section Back {
-<a href="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
+    @* todo: shouldn't appear when open page in new tab. just swap to use fh-back-link? *@
+    <a href="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
 }
 
 <div class="govuk-grid-row">
