--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Terms-and-conditions/Index.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Terms-and-conditions/Index.cshtml
@@ -5,6 +5,7 @@
 }
 
 @section Back {
+    @* todo: shouldn't appear when open page in new tab. just swap to use fh-back-link? *@
     <a href="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
 }
 
