add cookie page content

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_CookiePolicy.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_CookiePolicy.cshtml
@@ -1,2 +1,91 @@
-﻿
-<h1 class="govuk-heading-l govuk-!-margin-bottom-4 govuk-!-margin-top-2">Cookies</h1>
+﻿<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+
+        <h1 class="govuk-heading-l govuk-!-margin-bottom-4">Cookies</h1>
+
+        <p>Cookies are small files saved on your phone, tablet or computer when you visit a website.</p>
+        <p>We use cookies to make Manage family support and accounts work and collect information about how you use this website.</p>
+
+        <h2 class="govuk-heading-m govuk-!-margin-top-6">Essential cookies</h2>
+        <p>Essential cookies:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>keep your information secure while you use Manage family support and accounts</li>
+            <li>help us understand how you use the website, so we can make improvements</li>
+            <li>temporarily store the selections you make</li>
+            <li>remember what notifications you've seen, so you're not shown them more than once</li>
+        </ul>
+        <p>We do not need to ask permission to use them.</p>
+
+        <table class="govuk-table">
+            <thead class="govuk-table__head">
+                <tr class="govuk-table__row">
+                    <th scope="col" class="govuk-table__header">Name</th>
+                    <th scope="col" class="govuk-table__header">Purpose</th>
+                    <th scope="col" class="govuk-table__header">Expires</th>
+                </tr>
+            </thead>
+            <tbody class="govuk-table__body">
+                <tr class="govuk-table__row">
+                    <td class="govuk-table__cell">manage_family_support_cookies_policy</td>
+                    <td class="govuk-table__cell">Saves your cookie consent settings</td>
+                    <td class="govuk-table__cell">1 year</td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <td class="govuk-table__cell">.AspNetCore.Antiforgery.[random number]</td>
+                    <td class="govuk-table__cell">Prevents malicious activity while you’re using the website</td>
+                    <td class="govuk-table__cell">When you leave the website</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h2 class="govuk-heading-m govuk-!-margin-top-6">Analytics cookies (optional)</h2>
+        <p>With your permission, we use Google Analytics to collect data about how you use Manage family support and accounts. This information helps us to improve our service.</p>
+        <p>Google is not allowed to use or share our analytics data with anyone.</p>
+        <p>Google Analytics stores anonymised information about:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>how you got to Manage family support and accounts</li>
+            <li>the pages you visit on Manage family support and accounts and how long you spend on them</li>
+            <li>any errors you see while using Manage family support and accounts</li>
+        </ul>
+
+        <table class="govuk-table" aria-label="Cookies that measure website usage">
+            <thead class="govuk-table__head">
+                <tr>
+                    <th scope="col" class="govuk-table__header">
+                        Name
+                    </th>
+                    <th scope="col" class="govuk-table__header">
+                        Purpose
+                    </th>
+                    <th scope="col" class="govuk-table__header">
+                        Expires
+                    </th>
+                </tr>
+            </thead>
+            <tbody class="govuk-table__body">
+                <tr>
+                    <td class="govuk-table__cell">
+                        _ga
+                    </td>
+                    <td class="govuk-table__cell">
+                        Helps count how many people visit this site by tracking if you’ve visited before
+                    </td>
+                    <td class="govuk-table__cell">
+                        2 years
+                    </td>
+                </tr>
+                <tr>
+                    <td class="govuk-table__cell">
+                        _ga_[random number]
+                    </td>
+                    <td class="govuk-table__cell">
+                        Generates statistics about how you use the website
+                    </td>
+                    <td class="govuk-table__cell">
+                        2 years
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
