--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/AgreeToTermsAndConditions.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/AgreeToTermsAndConditions.cshtml
@@ -15,7 +15,7 @@
             <p>By continuing, you confirm that you agree to Manage family support services and accounts:</p>
             <ul class="govuk-list govuk-list--bullet">
                 <li><a asp-page="/Privacy" class="govuk-link" rel="noreferrer noopener" target="_blank">privacy notice (opens in new tab)</a>, which explains how we use your personal information</li>
-                <li><a asp-page="/Terms-and-conditions" class="govuk-link" rel="noreferrer noopener" target="_blank">terms and conditions (opens in new tab)</a></li>
+                <li><a asp-page="/Terms-and-conditions/Index" class="govuk-link" rel="noreferrer noopener" target="_blank">terms and conditions (opens in new tab)</a></li>
             </ul>
 
             <form method="post">
