add id for button on the check details layout

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_CheckDetailsPageLayout.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_CheckDetailsPageLayout.cshtml
@@ -31,7 +31,7 @@
 
                 <form method="post">
 
-                    <button class="govuk-button">
+                <button class="govuk-button" id="buttonConfirm">
                         Confirm details
                     </button>
                 </form>
