add id for the go to homepage button

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationResult.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationResult.cshtml
@@ -19,7 +19,7 @@
         </p>
         <p>You can do this from your homepage.</p>
         <form method="post">
-            <a asp-page="welcome" class="govuk-button">Go to homepage</a>
+            <a asp-page="welcome" id="buttonGoToHome" class="govuk-button">Go to homepage</a>
         </form>
 
     </div>
