fix title and email link

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Privacy.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Privacy.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.PrivacyModel
 @{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Privacy Notice";
 }
 
 @section Back {
@@ -102,7 +102,7 @@
                 <br>SK9 5AF
             </p><p>
                 Telephone: 0303 123 1113
-                <br>Email: <a href="icocasework@ico.org.uk">icocasework@ico.org.uk</a>
+                <br>Email: <a href="mailto:icocasework@ico.org.uk">icocasework@ico.org.uk</a>
             </p>
         </div>
         <p>Complaints to the Information Commissioner are without prejudice to your right to seek redress through the courts.</p>
