--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/ViewOrganisation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/ViewOrganisation.cshtml
@@ -25,7 +25,7 @@
         
             @if (Model.CanSave)
             {
-                <button class="govuk-button">Save</button> 
+                <button class="govuk-button" id="buttonSave">Save</button> 
             }
 
             <p><a href="@Model.BackPath">Back to manage local authorities and organisations</a></p>
