--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/DeleteOrganisation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/DeleteOrganisation.cshtml
@@ -58,7 +58,7 @@
                     </div>
                 </div>
 
-                <button class="govuk-button">
+                <button class="govuk-button" id="buttonConfirm">
                     Confirm
                 </button>
             </form>
