remove inline styles wip

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/EditRolesChangedConfirmation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/EditRolesChangedConfirmation.cshtml
@@ -15,7 +15,7 @@
 
         <h2 class="govuk-heading-m govuk-!-margin-top-6">What happens next</h2>
 
-        <p style="overflow-wrap: anywhere">
+        <p class="app-wrap-anywhere">
             We've emailed
             @Model.UserName
             to let them know that their permissions have changed.
