--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/_paginatedResults.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/_paginatedResults.cshtml
@@ -22,11 +22,11 @@
         {
             <tr class="govuk-table__row">
 
-                <td class="govuk-table__cell" style="overflow-wrap: anywhere">@account.Name</td>
+                <td class="govuk-table__cell app-wrap-anywhere">@account.Name</td>
 
-                <td class="govuk-table__cell" style="overflow-wrap: anywhere">@account.Email</td>
+                <td class="govuk-table__cell app-wrap-anywhere">@account.Email</td>
 
-                <td class="govuk-table__cell" style="overflow-wrap: anywhere">@IndexModel.OrganisationName(account)</td>
+                <td class="govuk-table__cell app-wrap-anywhere">@IndexModel.OrganisationName(account)</td>
 
                 <td class="govuk-table__cell govuk-table__cell--numeric">
                     <a class="govuk-!-margin-right-1" href="ManagePermissions/@account.Id">Edit</a>
