--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/Pages/ServiceName.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/Pages/ServiceName.cshtml
@@ -34,7 +34,7 @@
             <div class="govuk-form-group @(Model.ValidationValid == false ? "govuk-form-group--error" : "")">
                 <fieldset class="govuk-fieldset">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                        <h1 class="govuk-fieldset__heading" style="overflow-wrap: anywhere">
+                        <h1 class="govuk-fieldset__heading app-wrap-anywhere">
                             What is the name of the service?
                         </h1>
                     </legend>
