--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/DeleteOrganisationResult.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/DeleteOrganisationResult.cshtml
@@ -8,7 +8,7 @@
 <form method="post">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-l" style="overflow-wrap: anywhere">@Model.PageHeading</h1>
+            <h1 class="govuk-heading-l app-wrap-anywhere">@Model.PageHeading</h1>
             
             @if (Model.OrganisationDeleted)
             {                    
