--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/ViewOrganisation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/ViewOrganisation.cshtml
@@ -11,7 +11,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l" style="overflow-wrap: anywhere">@Model.OrganisationName</h1>
+        <h1 class="govuk-heading-l app-wrap-anywhere">@Model.OrganisationName</h1>
   </div>
 </div>
 <form method="post">
