--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_InputPageLayout.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_InputPageLayout.cshtml
@@ -16,53 +16,53 @@
     <a href="@Model.BackButtonPath" class="govuk-back-link">Back</a>
 }
 
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-            <form method="post">
-                <input type="hidden" id="backButtonPath" name="BackButtonPath" asp-for="BackButtonPath" />
-                <div class="govuk-form-group">
-                    @if (Model.HasValidationError)
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+        <form method="post">
+            <input type="hidden" id="backButtonPath" name="BackButtonPath" asp-for="BackButtonPath" />
+            <div class="govuk-form-group">
+                @if (Model.HasValidationError)
+                {
+                    <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" data-module="govuk-error-summary">
+                        <h2 class="govuk-error-summary__title" id="error-summary-title">
+                            There is a problem
+                        </h2>
+                        <div class="govuk-error-summary__body">
+                            <ul class="govuk-list govuk-error-summary__list" data-testid="errors-list">
+                                <li>
+                                    <a href="#@Model.ErrorElementId">@Model.ErrorMessage</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                }
+                <fieldset class="govuk-fieldset" >
+                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                    <h1 class="govuk-fieldset__heading app-wrap-anywhere">
+                            @Model.PageHeading
+                        </h1>
+                    </legend>
+
+                    @if (!string.IsNullOrEmpty(Model.HintText))
                     {
-                        <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" data-module="govuk-error-summary">
-                            <h2 class="govuk-error-summary__title" id="error-summary-title">
-                                There is a problem
-                            </h2>
-                            <div class="govuk-error-summary__body">
-                                <ul class="govuk-list govuk-error-summary__list" data-testid="errors-list">
-                                    <li>
-                                        <a href="#@Model.ErrorElementId">@Model.ErrorMessage</a>
-                                    </li>
-                                </ul>
-                            </div>
+                    <div class="govuk-hint app-wrap-anywhere">
+                            @Model.HintText
                         </div>
                     }
-                    <fieldset class="govuk-fieldset" >
-                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                            <h1 class="govuk-fieldset__heading" style="overflow-wrap: anywhere">
-                                @Model.PageHeading
-                            </h1>
-                        </legend>
 
-                        @if (!string.IsNullOrEmpty(Model.HintText))
+                    <div class="govuk-form-group @errorGroupCss">
+                        @if (Model.HasValidationError)
                         {
-                            <div class="govuk-hint" style="overflow-wrap: anywhere">
-                                @Model.HintText
-                            </div>
+                            <span class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> @Model.ErrorMessage</span>
                         }
+                        @RenderBody()
+                    </div>
 
-                        <div class="govuk-form-group @errorGroupCss">
-                            @if (Model.HasValidationError)
-                            {
-                                <span class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> @Model.ErrorMessage</span>
-                            }
-                            @RenderBody()
-                        </div>
-
-                    </fieldset>
-                </div>
-                <button class="govuk-button" id="buttonContinue">
-                    @Model.SubmitButtonText
-                </button>
-            </form>
-        </div>
+                </fieldset>
+            </div>
+            <button class="govuk-button" id="buttonContinue">
+                @Model.SubmitButtonText
+            </button>
+        </form>
     </div>
+</div>
